Fixed backface visibility issues

--- a/css/components/_color_row.scss
+++ b/css/components/_color_row.scss
@@ -30,7 +30,6 @@
 
 .color-row__output {
 	justify-content: end;
-	backface-visibility: hidden;
 }
 
 .color-row__output__text {
